# macOSSetup

./: README.md  default-config.yaml  pyproject.toml  setup.sh
src/macossetup/: __main__.py  cli.py  files.py  processes.py  typehints.py
