[tool.poetry]
name = "macossetup"
version = "0.1.0"
description = ""
authors = ["Bobronium <appkiller16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygitops = "^0.13.2"
plumbum = "^1.7.2"
tqdm = "^4.63.1"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
